started the project by importing dependencies and cleaning the data with pertinent columns

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -16,14 +16,441 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"resources/covid_states.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>probableCases</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>pending</th>\n",
+       "      <th>totalTestResultsSource</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>...</th>\n",
+       "      <th>posNeg</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>hash</th>\n",
+       "      <th>commercialScore</th>\n",
+       "      <th>negativeRegularScore</th>\n",
+       "      <th>negativeScore</th>\n",
+       "      <th>positiveScore</th>\n",
+       "      <th>score</th>\n",
+       "      <th>grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>35720.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1042056.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>totalTestsViral</td>\n",
+       "      <td>1077776.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1077776</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7b1d31e2756687bb9259b29195f1db6cdb321ea6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>269877.0</td>\n",
+       "      <td>45962.0</td>\n",
+       "      <td>1421126.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>totalTestsPeopleViral</td>\n",
+       "      <td>1645041.0</td>\n",
+       "      <td>1927.0</td>\n",
+       "      <td>26331.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1691003</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19454ed8fe28fc0a7948fc0771b2f3c846c1c92e</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>170924.0</td>\n",
+       "      <td>22753.0</td>\n",
+       "      <td>1614979.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>totalTestsViral</td>\n",
+       "      <td>1763150.0</td>\n",
+       "      <td>1076.0</td>\n",
+       "      <td>9401.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1785903</td>\n",
+       "      <td>40</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25fc83bffff5b32ba1a737be8e087fad9f4fde33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>totalTestsViral</td>\n",
+       "      <td>2140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2140</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8c39eec317586b0c34fc2903e6a3891ecb00469e</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>364276.0</td>\n",
+       "      <td>12590.0</td>\n",
+       "      <td>2018813.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>totalTestsPeopleViral</td>\n",
+       "      <td>2370499.0</td>\n",
+       "      <td>2977.0</td>\n",
+       "      <td>28248.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2383089</td>\n",
+       "      <td>25</td>\n",
+       "      <td>242</td>\n",
+       "      <td>7cf59da9e4bc31d905e179211313d08879880a85</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 55 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       date state  positive  probableCases   negative  pending  \\\n",
+       "0  20201206    AK   35720.0            NaN  1042056.0      NaN   \n",
+       "1  20201206    AL  269877.0        45962.0  1421126.0      NaN   \n",
+       "2  20201206    AR  170924.0        22753.0  1614979.0      NaN   \n",
+       "3  20201206    AS       0.0            NaN     2140.0      NaN   \n",
+       "4  20201206    AZ  364276.0        12590.0  2018813.0      NaN   \n",
+       "\n",
+       "  totalTestResultsSource  totalTestResults  hospitalizedCurrently  \\\n",
+       "0        totalTestsViral         1077776.0                  164.0   \n",
+       "1  totalTestsPeopleViral         1645041.0                 1927.0   \n",
+       "2        totalTestsViral         1763150.0                 1076.0   \n",
+       "3        totalTestsViral            2140.0                    NaN   \n",
+       "4  totalTestsPeopleViral         2370499.0                 2977.0   \n",
+       "\n",
+       "   hospitalizedCumulative  ...   posNeg  deathIncrease  hospitalizedIncrease  \\\n",
+       "0                   799.0  ...  1077776              0                     0   \n",
+       "1                 26331.0  ...  1691003             12                     0   \n",
+       "2                  9401.0  ...  1785903             40                    21   \n",
+       "3                     NaN  ...     2140              0                     0   \n",
+       "4                 28248.0  ...  2383089             25                   242   \n",
+       "\n",
+       "                                       hash  commercialScore  \\\n",
+       "0  7b1d31e2756687bb9259b29195f1db6cdb321ea6                0   \n",
+       "1  19454ed8fe28fc0a7948fc0771b2f3c846c1c92e                0   \n",
+       "2  25fc83bffff5b32ba1a737be8e087fad9f4fde33                0   \n",
+       "3  8c39eec317586b0c34fc2903e6a3891ecb00469e                0   \n",
+       "4  7cf59da9e4bc31d905e179211313d08879880a85                0   \n",
+       "\n",
+       "  negativeRegularScore negativeScore positiveScore score  grade  \n",
+       "0                    0             0             0     0    NaN  \n",
+       "1                    0             0             0     0    NaN  \n",
+       "2                    0             0             0     0    NaN  \n",
+       "3                    0             0             0     0    NaN  \n",
+       "4                    0             0             0     0    NaN  \n",
+       "\n",
+       "[5 rows x 55 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()\n",
+    "\n",
+    "# I looked through the csv file manually and selected the columns that I felt were more critical to the analysis\n",
+    "# Obviously the gravity of the column's importance can be different for someone else\n",
+    "# So I encourage others to download the resource first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>positiveIncrease</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>onVentilatorCurrently</th>\n",
+       "      <th>onVentilatorCumulative</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>deathConfirmed</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>dataQualityGrade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>35720.0</td>\n",
+       "      <td>1042056.0</td>\n",
+       "      <td>757</td>\n",
+       "      <td>1077776.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7165.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>269877.0</td>\n",
+       "      <td>1421126.0</td>\n",
+       "      <td>2288</td>\n",
+       "      <td>1645041.0</td>\n",
+       "      <td>1927.0</td>\n",
+       "      <td>26331.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1317.0</td>\n",
+       "      <td>168387.0</td>\n",
+       "      <td>3462.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>170924.0</td>\n",
+       "      <td>1614979.0</td>\n",
+       "      <td>1542</td>\n",
+       "      <td>1763150.0</td>\n",
+       "      <td>1076.0</td>\n",
+       "      <td>9401.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>1038.0</td>\n",
+       "      <td>149490.0</td>\n",
+       "      <td>2437.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2140.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20201206</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>364276.0</td>\n",
+       "      <td>2018813.0</td>\n",
+       "      <td>5376</td>\n",
+       "      <td>2370499.0</td>\n",
+       "      <td>2977.0</td>\n",
+       "      <td>28248.0</td>\n",
+       "      <td>242</td>\n",
+       "      <td>462.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>56382.0</td>\n",
+       "      <td>6431.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       date state  positive   negative  positiveIncrease  totalTestResults  \\\n",
+       "0  20201206    AK   35720.0  1042056.0               757         1077776.0   \n",
+       "1  20201206    AL  269877.0  1421126.0              2288         1645041.0   \n",
+       "2  20201206    AR  170924.0  1614979.0              1542         1763150.0   \n",
+       "3  20201206    AS       0.0     2140.0                 0            2140.0   \n",
+       "4  20201206    AZ  364276.0  2018813.0              5376         2370499.0   \n",
+       "\n",
+       "   hospitalizedCurrently  hospitalizedCumulative  hospitalizedIncrease  \\\n",
+       "0                  164.0                   799.0                     0   \n",
+       "1                 1927.0                 26331.0                     0   \n",
+       "2                 1076.0                  9401.0                    21   \n",
+       "3                    NaN                     NaN                     0   \n",
+       "4                 2977.0                 28248.0                   242   \n",
+       "\n",
+       "   onVentilatorCurrently  onVentilatorCumulative  recovered  deathConfirmed  \\\n",
+       "0                   21.0                     NaN     7165.0           143.0   \n",
+       "1                    NaN                  1317.0   168387.0          3462.0   \n",
+       "2                  179.0                  1038.0   149490.0          2437.0   \n",
+       "3                    NaN                     NaN        NaN             NaN   \n",
+       "4                  462.0                     NaN    56382.0          6431.0   \n",
+       "\n",
+       "   deathIncrease dataQualityGrade  \n",
+       "0              0                A  \n",
+       "1             12                A  \n",
+       "2             40               A+  \n",
+       "3              0                D  \n",
+       "4             25               A+  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Taking specific columns from the entire dataset\n",
+    "\n",
+    "covid = data[['date', 'state', 'positive', 'negative', 'positiveIncrease', 'totalTestResults',\n",
+    "             'hospitalizedCurrently', 'hospitalizedCumulative', 'hospitalizedIncrease',\n",
+    "             'onVentilatorCurrently', 'onVentilatorCumulative', 'recovered', \n",
+    "             'deathConfirmed', 'deathIncrease', 'dataQualityGrade']]\n",
+    "covid.head()"
    ]
   },
   {
