added article proof of death increase in california. washington post link included

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -1010,6 +1010,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Information regarding August death toll increase\n",
+    "\n",
+    "An [interesting article written by the Washington Post](https://www.washingtonpost.com/nation/2020/08/30/coronavirus-covid-updates/) gives details pertinent to the assumptions made above. \n",
+    "* \"We should have seen infection levels come down in July and August. They didn’t.\" - Scott Gottlieb\n",
+    "* Children started returning to schools, thereby spreading the virus further\n",
+    "* The virus spread to more rural parts of the state, where medicines and more advanced tech was unavailable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
