created dataframes for most and least populated states

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -1022,6 +1022,397 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is there a correlation between the five most populated states vs the five least populated states?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to tthe [World Population Review](https://worldpopulationreview.com/states), themost populated cities are:\n",
+    "* California\n",
+    "* Texas\n",
+    "* Florida\n",
+    "* New York\n",
+    "* Pennsylvania\n",
+    "\n",
+    "and the least populated are:\n",
+    "* Wyoming\n",
+    "* Vermont\n",
+    "* District of Columbia\n",
+    "* Alaska\n",
+    "* North Dakota "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>positiveIncrease</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>onVentilatorCurrently</th>\n",
+       "      <th>onVentilatorCumulative</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>deathConfirmed</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>dataQualityGrade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1341700.0</td>\n",
+       "      <td>23853346.0</td>\n",
+       "      <td>30075</td>\n",
+       "      <td>25195046.0</td>\n",
+       "      <td>10624.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>1040727.0</td>\n",
+       "      <td>6505237.0</td>\n",
+       "      <td>8175</td>\n",
+       "      <td>13083521.0</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>57185.0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19423.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>705827.0</td>\n",
+       "      <td>19888867.0</td>\n",
+       "      <td>9702</td>\n",
+       "      <td>20594694.0</td>\n",
+       "      <td>4442.0</td>\n",
+       "      <td>89995.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>464.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>87949.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>420114.0</td>\n",
+       "      <td>2929036.0</td>\n",
+       "      <td>8630</td>\n",
+       "      <td>3349150.0</td>\n",
+       "      <td>5300.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>587.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>238660.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>1249323.0</td>\n",
+       "      <td>10111653.0</td>\n",
+       "      <td>8573</td>\n",
+       "      <td>11360976.0</td>\n",
+       "      <td>8681.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1030716.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>92</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date state   positive    negative  positiveIncrease  \\\n",
+       "5  2020-12-06    CA  1341700.0  23853346.0             30075   \n",
+       "10 2020-12-06    FL  1040727.0   6505237.0              8175   \n",
+       "37 2020-12-06    NY   705827.0  19888867.0              9702   \n",
+       "41 2020-12-06    PA   420114.0   2929036.0              8630   \n",
+       "47 2020-12-06    TX  1249323.0  10111653.0              8573   \n",
+       "\n",
+       "    totalTestResults  hospitalizedCurrently  hospitalizedCumulative  \\\n",
+       "5         25195046.0                10624.0                     NaN   \n",
+       "10        13083521.0                 4400.0                 57185.0   \n",
+       "37        20594694.0                 4442.0                 89995.0   \n",
+       "41         3349150.0                 5300.0                     NaN   \n",
+       "47        11360976.0                 8681.0                     NaN   \n",
+       "\n",
+       "    hospitalizedIncrease  onVentilatorCurrently  onVentilatorCumulative  \\\n",
+       "5                      0                    NaN                     NaN   \n",
+       "10                   145                    NaN                     NaN   \n",
+       "37                     0                  464.0                     NaN   \n",
+       "41                     0                  587.0                     NaN   \n",
+       "47                     0                    NaN                     NaN   \n",
+       "\n",
+       "    recovered  deathConfirmed  deathIncrease dataQualityGrade  \n",
+       "5         NaN             NaN             85                B  \n",
+       "10        NaN         19423.0             96                A  \n",
+       "37    87949.0             NaN             60                B  \n",
+       "41   238660.0             NaN             69               A+  \n",
+       "47  1030716.0             NaN             92                A  "
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating separate dataframes for both sets\n",
+    "most_pop = covid[covid.state.isin([\"CA\", \"TX\", \"FL\", \"NY\", \"PA\"])]\n",
+    "least_pop = covid[covid.state.isin([\"WY, VT\", \"DC\", \"AK\", \"ND\"])]\n",
+    "\n",
+    "most_pop.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>positiveIncrease</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>onVentilatorCurrently</th>\n",
+       "      <th>onVentilatorCumulative</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>deathConfirmed</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>dataQualityGrade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>35720.0</td>\n",
+       "      <td>1042056.0</td>\n",
+       "      <td>757</td>\n",
+       "      <td>1077776.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7165.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>DC</td>\n",
+       "      <td>23136.0</td>\n",
+       "      <td>711497.0</td>\n",
+       "      <td>264</td>\n",
+       "      <td>734633.0</td>\n",
+       "      <td>171.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16665.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>82981.0</td>\n",
+       "      <td>274492.0</td>\n",
+       "      <td>477</td>\n",
+       "      <td>1132025.0</td>\n",
+       "      <td>305.0</td>\n",
+       "      <td>2880.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>76999.0</td>\n",
+       "      <td>1013.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>2020-12-05</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>34963.0</td>\n",
+       "      <td>1032268.0</td>\n",
+       "      <td>922</td>\n",
+       "      <td>1067231.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7165.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2020-12-05</td>\n",
+       "      <td>DC</td>\n",
+       "      <td>22872.0</td>\n",
+       "      <td>704515.0</td>\n",
+       "      <td>392</td>\n",
+       "      <td>727387.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16596.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date state  positive   negative  positiveIncrease  totalTestResults  \\\n",
+       "0  2020-12-06    AK   35720.0  1042056.0               757         1077776.0   \n",
+       "8  2020-12-06    DC   23136.0   711497.0               264          734633.0   \n",
+       "31 2020-12-06    ND   82981.0   274492.0               477         1132025.0   \n",
+       "56 2020-12-05    AK   34963.0  1032268.0               922         1067231.0   \n",
+       "64 2020-12-05    DC   22872.0   704515.0               392          727387.0   \n",
+       "\n",
+       "    hospitalizedCurrently  hospitalizedCumulative  hospitalizedIncrease  \\\n",
+       "0                   164.0                   799.0                     0   \n",
+       "8                   171.0                     NaN                     0   \n",
+       "31                  305.0                  2880.0                    12   \n",
+       "56                  166.0                   799.0                     5   \n",
+       "64                  193.0                     NaN                     0   \n",
+       "\n",
+       "    onVentilatorCurrently  onVentilatorCumulative  recovered  deathConfirmed  \\\n",
+       "0                    21.0                     NaN     7165.0           143.0   \n",
+       "8                    23.0                     NaN    16665.0             NaN   \n",
+       "31                    NaN                     NaN    76999.0          1013.0   \n",
+       "56                   24.0                     NaN     7165.0           143.0   \n",
+       "64                   22.0                     NaN    16596.0             NaN   \n",
+       "\n",
+       "    deathIncrease dataQualityGrade  \n",
+       "0               0                A  \n",
+       "8               2               A+  \n",
+       "31              6                B  \n",
+       "56              1                A  \n",
+       "64              2               A+  "
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "least_pop.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the populations vary so greatly, to adhere to scalability, I will create separate graphs to show."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
