comppleted positive test cases in most least populated states with lingering questions and brief analysis

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -1499,7 +1499,14 @@
    "source": [
     "NOTE: The dataset provides data only for AK, DC, and ND.  \n",
     "\n",
-    "Key takeaways:"
+    "Key takeaways:\n",
+    "* North Dakota seemed to skyrocket toward the end of the year. Similar to most trends we've seen so far.\n",
+    "* DC and AK follow more of a flat line, a constant positive increase that doesnt follow the same intense rise in positive cases like the top three most populated states. \n",
+    "* We cannot say that least populated states are least likely to spike in positive cases because some states (i.e. ND) follow similar patterns to CA, TX, and FL.\n",
+    "\n",
+    "Lingering Questions:\n",
+    "* Based on the Most and Least populated scatterplots, could there by an inverse correlation between inland states vs outer states?\n",
+    "* Lets take a look at regions to find why ND followed similar patterns to most populated states."
    ]
   },
   {
