running entire jupyter notebook to fix comments or codes that disfunctioned during todays analysis

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 347,
    "metadata": {
     "scrolled": false
    },
@@ -440,7 +440,7 @@
        "4             25               A+  "
       ]
      },
-     "execution_count": 332,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 348,
    "metadata": {
     "scrolled": true
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 349,
    "metadata": {
     "scrolled": true
    },
@@ -645,7 +645,7 @@
        "4             25               A+  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,16 +665,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc589a26610>]"
+       "[<matplotlib.lines.Line2D at 0x7fc58fd02280>]"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -705,16 +705,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc58ecea550>]"
+       "[<matplotlib.lines.Line2D at 0x7fc57202ca90>]"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "229        NaN             NaN            113                B  "
       ]
      },
-     "execution_count": 337,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
        "47  1030716.0             NaN             92                A  "
       ]
      },
-     "execution_count": 340,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
        "64              2               A+  "
       ]
      },
-     "execution_count": 341,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
        "<AxesSubplot:xlabel='date', ylabel='positive'>"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
        "<AxesSubplot:xlabel='date', ylabel='positive'>"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     },
